--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Lora:700');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 * {
     margin: 0;
@@ -9,9 +11,20 @@ body {
     background: #fff;
 }
 
+h1 {
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 3em;
+    text-align: center;
+    padding-top: 0.5em;
+}
+
+h2 {
+    font-family: Lora, sans-serif;
+}
+
 header {
     width: 100%;
-    background-color: white;
+    background-color: #354881;
     color: #333;
     font-family: sans-serif;
     position: relative;
@@ -41,17 +54,16 @@ nav ul li a, .dropbtn {
     text-align: center;
     text-decoration: none;
     font-size: 1em;
-    color: black;
+    color: white;
     width: auto;
 }
 
 .dropdown {
-    background: linear-gradient(#ddd, #fff);
     padding: 13px 16px;
+    padding-bottom: 14px;
     margin-left: 40px;
     border-top-right-radius: 12px;
     border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
 }
 
 .dropdown_content {
@@ -59,7 +71,7 @@ nav ul li a, .dropbtn {
     display: none;
     text-align: center;
     z-index: 1;
-    background-color: #ddd;
+    background-color: #354881;
     margin-left: -16px;
     margin-top: 14px;
 }
@@ -67,10 +79,9 @@ nav ul li a, .dropbtn {
 .dropdown_content a {
     padding: 12px 16px;
     display: block;
-    background: linear-gradient(#ddd, #fff);
+    background: linear-gradient(#354881, #5e6ead);
     border-bottom-right-radius: 12px;
     border-bottom-left-radius: 12px;
-    border-top-right-radius: 12px;
 }
 
 .dropdown_content {
@@ -83,14 +94,67 @@ nav ul li a, .dropbtn {
     display: block;
 }
 
-main {
+.dropdown:hover, .active{
+    background: linear-gradient(#5e6ead, #354881);
 }
 
-h1 {
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 3em;
+.dropdown_content a:hover{
+    background: linear-gradient(#7387d6, #4d69bc);
+}
+
+.dropdown_content:hover {
+    background: linear-gradient(#6071b3, #3a4f8d);
+}
+
+main {
+    margin-bottom: 10em;
+}
+
+#stundenplan {
+    margin: 2em;
     text-align: center;
-    padding-top: 0.5em;
+}
+
+#stundenplan table {
+    background: white;
+    width: 100%;
+    margin-top: 1em;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.5em;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+#stundenplan td, #stundenplan th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#stundenplan td p {
+    font-size: 0.8em;
+}
+
+#stundenplan tr:nth-child(even){background-color: #f2f2f2;}
+
+#stundenplan tr:hover {background-color: #ddd;}
+
+.popup {
+    display: none;
+}
+
+td:hover .popup {
+    position: absolute;
+    border: 1px solid black;
+    background: white;
+    padding: 0.5em;
+    display: block;
+}
+
+#zusatzinfos {
+    line-height: 3em;
+    font-family: sans-serif;
+    font-size: 1.2em;
+    text-align: center;
 }
 
 footer {
