--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -12,6 +12,17 @@ body {
     background: #fff;
 }
 
+.background {
+    background-size: cover;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    z-index: -1;
+    opacity: 0.2;
+}
+
 h1 {
     font-family: "Roboto Condensed", sans-serif;
     font-size: 3em;
@@ -29,24 +40,24 @@ header {
     color: #333;
     font-family: sans-serif;
     position: relative;
-    height: 4.2em;
+    height: 3.5em;
 }
 
 #logo {
-    height: 70px;
+    height: 3.5em;
     position: absolute;
-    top: -2px;
+    background: rgba(255, 255, 255, 0.26);
+    border-radius: 12px;
     left: 20px;
 }
 
 #logo:hover {
-    background: rgba(255, 255, 255, 0.27);
-    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.45);
 }
 
 nav ul {
     list-style-type: none;
-    font-size: 2em;
+    font-size: 1.5em;
     width: 100%;
     margin-left: 5%;
 }
@@ -172,14 +183,22 @@ td:hover .popup {
     text-align: center;
 }
 
+#attention {
+    background: #354881;
+    color: white;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-top: 2px inset black;
+    border-radius: 12px;
+}
+
 footer {
     position: fixed;
     background: linear-gradient(#fff, #ddd);
     bottom: 0;
     width: 100%;
     text-align: center;
-    line-height: 2.5em;
-    border-top: 1px dashed black;
+    line-height: 1.8em;
+    border-top: 1px solid black;
 }
 
 footer a {
