--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -28,14 +28,14 @@ header {
     background-color: #354881;
     color: #333;
     font-family: sans-serif;
-    height: 3.5em;
+    height: 3.6em;
     position: fixed;
     top: 0;
     z-index: 10;
 }
 
 #logo {
-    height: 3.5em;
+    height: 3.6em;
     position: fixed;
     top: 0;
     background: rgba(255, 255, 255, 0.26);
@@ -60,7 +60,7 @@ nav ul {
     position: fixed;
     top: 0;
     list-style-type: none;
-    font-size: 1.4em;
+    font-size: 1.5em;
     width: 95%;
     margin-left: 5%;
     z-index: 10;
@@ -82,7 +82,10 @@ nav ul li a, .dropbtn {
 }
 
 .dropdown {
-    padding: 14px 16px;
+    padding-bottom: 14px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 16px;
     margin-left: 40px;
     border-top-right-radius: 12px;
     border-top-left-radius: 12px;
